dev/openclaw/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openclaw
  namespace: openclaw
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openclaw.mtaku3.com`)
      kind: Rule
      services:
        - name: openclaw
          port: http
  tls:
    secretName: openclaw-tls-cert
